<resources>
    <string name="app_name">Payday</string>
    <string name="TO">TO</string>
    <string name="fromTo">~</string>
    <string name="TakePictureSaying">찰칵</string>


    <string name="currendate">CurrenDate</string>
    <string name="from">FROM</string>
    <string name="yes">예</string>
    <string name="no">아뇨</string>
    <string name="fromtime">몇시부터</string>
    <string name="fromto">몇시까지</string>
    <string name="fromwhattime">몇시까지</string>
    <string name="towhattime">몇시부터</string>
    <string name="blanks" />
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="sunday">일</string>
    <string name="todo">TODO</string>
    <string name="choose">선택</string>
    <string name="delete">삭제</string>
    <string name="edit">수정</string>
    <string name="chooseparttime">알바를 선택하세요</string>
    <string name="photo_getoffwork">퇴근인증사진</string>
    <string name="save">저장</string>
    <array name="material_calendar_months_array">
        <item>1월</item>
        <item>2월</item>
        <item>3월</item>
        <item>4월</item>
        <item>5월</item>
        <item>6월</item>
        <item>7월</item>
        <item>8월</item>
        <item>9월</item>
        <item>10월</item>
        <item>11월</item>
        <item>12월</item>
    </array>
</resources>