<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="start"
    android:background="#fbf5df"
    android:gravity="start"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/txt_ParttimeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font"
        android:background="@drawable/buttomline"
        android:textSize="20sp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="알바이름을쓰시오" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center"
            android:textSize="20sp"
            android:fontFamily="@font/font"
            android:text="기본시급"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/txt_hourlypay"
            android:layout_width="125dp"
            android:layout_height="49dp"
            android:textSize="24sp"
            android:layout_weight="2"
            android:background="@drawable/buttomline"
            android:fontFamily="@font/font"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="7500" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:background="@drawable/smalltitles"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:gravity="center"
            android:textSize="20sp"
            android:fontFamily="@font/font"
            android:text="고정근무요일" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <CheckBox
            android:id="@+id/cb_mon"
            android:layout_width="wrap_content"
            android:fontFamily="@font/font"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:buttonTint="#ED7E76"
            android:layout_weight="1.5"
            android:text="@string/monday" />

        <CheckBox
            android:id="@+id/cb_tues"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:buttonTint="#ED7E76"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font"
            android:layout_weight="1.5"
            android:text="@string/tuesday" />

        <CheckBox
            android:id="@+id/cb_wed"
            android:layout_width="wrap_content"
            android:buttonTint="#ED7E76"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:fontFamily="@font/font"
            android:text="@string/wednesday" />

        <CheckBox
            android:id="@+id/cb_thurs"
            android:layout_width="wrap_content"
            android:buttonTint="#ED7E76"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/font"
            android:text="@string/thursday" />

        <CheckBox
            android:id="@+id/cb_fri"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:buttonTint="#ED7E76"
            android:fontFamily="@font/font"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/friday" />

        <CheckBox
            android:id="@+id/cb_sat"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:buttonTint="#ED7E76"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font"
            android:layout_weight="1"
            android:text="@string/saturday" />

        <CheckBox
            android:id="@+id/cb_sun"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:buttonTint="#ED7E76"
            android:fontFamily="@font/font"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sunday" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:fontFamily="@font/font"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:gravity="center"
            android:background="@drawable/smalltitles"
            android:text="고정근무시간" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_tpFrom"
            android:layout_width="50dp"
            android:background="@drawable/totalbuttonshape"
            android:layout_height="wrap_content"
            android:text="@string/fromtime"
            android:textColor="#ffffff"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/font"
            />

        <TextView
            android:id="@+id/txt_pFrom"
            android:layout_width="70dp"
            android:fontFamily="@font/font"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="70dp"
            android:fontFamily="@font/font"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="~"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_tpTo"
            android:background="@drawable/totalbuttonshape"
            android:fontFamily="@font/font"
            android:layout_width="50dp"
            android:textColor="#ffffff"
            android:layout_height="wrap_content"
            android:text="@string/fromto" />

        <TextView
            android:id="@+id/txt_pTo"
            android:layout_width="70dp"
            android:fontFamily="@font/font"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:fontFamily="@font/font"
        android:background="@drawable/smalltitles"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:gravity="center"
        android:text="5인 이상 사업장 입니까?" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/rb_group"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_yes"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:fontFamily="@font/font"
                android:layout_height="match_parent"
                android:layout_marginStart="60dp"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/rb_no"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:fontFamily="@font/font"
                android:layout_height="match_parent"
                android:layout_marginStart="60dp"
                android:text="@string/no" />

        </RadioGroup>

        <ImageButton
            android:id="@+id/btn_helpWorkplace"
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/questionmark"
            android:textSize="20sp"
            android:contentDescription="@string/todo" />

    </LinearLayout>


    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:fontFamily="@font/font"
        android:background="@drawable/smalltitles"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:gravity="center"
        android:text="무급휴식시간(식사시간)" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/txt_mealtime"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:background="@drawable/buttomline"

                />
            <TextView
                android:layout_marginStart="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font"
                android:textSize="35sp"
                android:text="분"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:layout_margin="10dp"
                android:id="@+id/btn_helpBreaktime"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/questionmark"
                android:textSize="20sp"
                android:contentDescription="@string/todo" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_pSave"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:background="@drawable/totalbuttonshape"
            android:textColor="#ffffff"
            android:fontFamily="@font/font"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="저장" />

        <Button
            android:id="@+id/btn_pCancel"
            android:layout_width="wrap_content"
            android:textColor="#ffffff"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font"
            android:textSize="20sp"
            android:background="@drawable/totalbuttonshape"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="취소" />
    </LinearLayout>

</LinearLayout>